--- a/TestMakerFreeWebApp/ClientApp/app/components/home/home.component.html
+++ b/TestMakerFreeWebApp/ClientApp/app/components/home/home.component.html
@@ -1,3 +1,5 @@
-<h1>Greetings</h1>
-<p>This is what you get for messing around with .Net Core and Angular ... Have fun learning</p>
-
+<h1>Welcome to TestMakerFree</h1>
+<p>A sample SPA project made with .NET Core and Angular.</p>
+<quiz-list class="latest"></quiz-list>
+<quiz-list class="byTitle"></quiz-list>
+<quiz-list class="random"></quiz-list>
